# ideagnment

./: AI_REFERENCE.md  README.md  pyproject.toml
.sap/: sap.db
config/: models.json
docs/: getting-started.md  milestone-a-checklist.md  mock-messaging-demo.html  semanticAlignmentProtocol-roadmap.md  skeleton.md
docs/concept/: main-prompt-concept.md
examples/mock_messaging/: index.html  server.py
src/sap_api/: app.py  deps.py
src/sap_api/routes/: actor.py  capsule.py  draft.py  health.py  ingest.py  skills.py  workspace.py
src/sap_core/domain/: models.py
src/sap_core/pipelines/: draft_analyze.py  draft_render.py  ingest.py  skills.py
src/sap_core/privacy/: partitioning.py
src/sap_core/prompts/: templates.py
src/sap_core/retrieval/: retrieve.py
src/sap_core/scoring/: scoring.py
src/sap_models/: catalog.py  config.py  embedder.py  llm.py  registry.py  router.py
src/sap_store/sqlite/: db.py  migrate.py
src/sap_store/sqlite/migrations/: 0001_init.sql  0002_fts.sql  0003_jobs.sql  0004_skills.sql
src/sap_workers/: worker.py
